[project]
name = "kaggle-template"
version = "0.1.0"
description = "kaggle environment"
readme = "README.md"
requires-python = "==3.11"
dependencies = ["hydra-core"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
hydra-core = "*"

[tool.pixi.pypi-dependencies]
# ref: https://github.com/Kaggle/docker-python/blob/main/kaggle_requirements.txt
# DS
matplotlib = "<3.8"
numpy = "*"
polars = { version = "*", extras = ["all"] } # not included!
pandas = "*"
seaborn = "==0.12.2"
scipy = "<=1.15.3"
optuna = "*"
scikit-learn = "==1.2.2"
xgboost = "==2.0.3"
catboost = "*"
lightgbm = "*" # not included!

# notebook
jupyterlab = "*"
treon = "*" # not included!

# ML
pytorch-lightning = "*"
onnx = "*"
transformers = ">=4.51.0"
wandb = "*"

# GCP
# google-cloud-aiplatform = "*"
# google-cloud-translate = "*"
# google-cloud-videointelligence = "*"
# google-cloud-vision = "*"
# google-genai = "*"

# kaggle
kaggle = ">=1.7.4.2"

# profiler
line_profiler = "*"

# util
ray = "*"

[tool.pixi.target.linux-64.pypi-dependencies]
kaggle-environments = "*"

[tool.pixi.feature.gpu]
system-requirements = { cuda = "12.4" }
platforms = ["linux-64"]

[tool.pixi.feature.gpu.pypi-dependencies]
torch = { version = "*", index = "https://download.pytorch.org/whl/cu124" }
torchvision = { version = "*", index = "https://download.pytorch.org/whl/cu124" }

[tool.pixi.feature.cpu.pypi-dependencies]
torch = { version = "*", index = "https://download.pytorch.org/whl/cpu" }
torchvision = { version = "*", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.environments]
gpu = { features = ["gpu"] }
default = { features = ["cpu"] }

[tool.pixi.tasks]
update = "git pull && pixi install"
docker_build = "docker build -t mykgl ."
jupyter_remote = "jupyter lab --no-browser --port=8889" # ssh -N -L localhost:8888:localhost:8889 HOST1 && open http://localhost:8888
